# SchoolProjects

Computer Networks With Python/Socket Programming With Python/Chat Room/: .gitignore  README.md
Computer Networks With Python/Socket Programming With Python/Chat Room/client/: main.py  receiver.py
Computer Networks With Python/Socket Programming With Python/Chat Room/server/: client_handler.py  config.py  main.py
Computer Networks With Python/Socket Programming With Python/Custom FTP/: .gitignore  README.md
Computer Networks With Python/Socket Programming With Python/Custom FTP/client/: __init__.py  config.py  main.py  sender.py
Computer Networks With Python/Socket Programming With Python/Custom FTP/common/: __init__.py  protocol.py
Computer Networks With Python/Socket Programming With Python/Simple HTTP Server/: .gitignore  README.md  config.py  server.py
Computer Networks With Python/Socket Programming With Python/Simple TCP Server/: 251805044_GörkemBozkaya_CN_WebServer.docx  TCP_WebServer.py
Computer Networks/Socket Programming With Python/Client-Server Communication with Socket Programming/: TCP_WebServer.py
Data Analysis With Python/Exploratory Data Analysis/Book Sales (EDA)/: Books.ipynb
Data Analysis With Python/Exploratory Data Analysis/Flights (EDA)/: flights.ipynb
Data Analysis With Python/Exploratory Data Analysis/Insurance (EDA)/: insurance.ipynb
Data Analysis With Python/Income (EDA)/: income.ipynb
Data Analysis With Python/Iris (EDA)/: Iris.ipynb
Data Structures and Algorithms With Java/Binary Search Tree Project/251805044/: inputBst.txt
Embedded Development With ESP32/Combination Lock (Electronic)/: Code.ino
Embedded Development With ESP32/ESP32 Wave Generations/Calibration of ESP32/: adc1.txt  adc2.txt
Embedded Development With ESP32/ESP32 Wave Generations/Wave Generations/: Deney1Devresi10HZ.json  Deney1Devresi20HZ.json  Deney2Devresi.json  Deney3Devresi.json  README.md
Embedded Development With ESP32/Multimeter/: Multimeter ESP32 Code.txt  Multimeter GUI.py
Game Development With Unity/PURGE (Source Code)/: .gitignore  DownloadLink  GDD.md  README.md
Game Development With Unity/PURGE (Source Code)/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Graphical Programming With OpenGL/3D Robot Kinemathics/: CMakeLists.txt  READM.md  README.md
Graphical Programming With OpenGL/3D Robot Kinemathics/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Graphical Programming With OpenGL/3D Robot Kinemathics/build-ninja/.cmake/api/v1/reply/: cache-v2-bc3141f64e2d2f49f504.json  cmakeFiles-v1-4265a9796a7bac616cbf.json  codemodel-v2-8b9b7d8406e37f827e49.json  index-2026-04-14T11-32-40-0434.json  target-RobotKinematics-Debug-ec1a78181566f3dd1d41.json
Graphical Programming With OpenGL/3D Robot Kinemathics/src/: App.cpp  App.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Robot.cpp  Robot.h  main.cpp
Graphical Programming With OpenGL/Flight Simulator/: .gitignore  CMakeLists.txt  README.md
Graphical Programming With OpenGL/Flight Simulator/res/shaders/: hud.frag  hud.vert  model.frag  model.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
Graphical Programming With OpenGL/Flight Simulator/res/textures/: heightmap.ppm  plane_diffuse.ppm  terrain_diffuse.ppm
Graphical Programming With OpenGL/Flight Simulator/res/textures/skybox/: back.ppm  bottom.ppm  right.ppm  top.ppm
Graphical Programming With OpenGL/Flight Simulator/src/: main.cpp
Graphical Programming With OpenGL/Flight Simulator/src/Config/: Tuning.h
Graphical Programming With OpenGL/Flight Simulator/src/Core/: Input.cpp  Input.h  Window.cpp  Window.h
Graphical Programming With OpenGL/Flight Simulator/src/Graphics/: Camera.cpp  Camera.h  Hud.cpp  Hud.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Graphical Programming With OpenGL/Flight Simulator/src/Simulation/: Plane.cpp  Plane.h  Terrain.cpp  Terrain.h
Graphical Programming With OpenGL/Solar System/: .gitignore  CMakeLists.txt  README.md
Graphical Programming With OpenGL/Solar System/res/shaders/: basic.vert  light.frag  skybox.frag  skybox.vert  unlit.frag
Graphical Programming With OpenGL/Solar System/res/textures/: README.txt
Graphical Programming With OpenGL/Solar System/res/textures/skybox/: README.txt
Graphical Programming With OpenGL/Solar System/scripts/: generate_solar_assets.py
Graphical Programming With OpenGL/Solar System/src/: main.cpp
Graphical Programming With OpenGL/Solar System/src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
Graphical Programming With OpenGL/Solar System/src/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Graphical Programming With OpenGL/Solar System/src/Scene/: CelestialBody.cpp  CelestialBody.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
Object Oriented Programming With C++/: PhoneBook.cpp
Object Oriented Programming With C++/PasswordManager/: Node.h  PasswordManager.cpp  README.md  Tree.cpp  Tree.h
Other/GfG BE20/Task Manager API/: README.md
Programming Basics With C/: Bank.c  BusTicket.c  Calculator.c  Calendar.c  DigitalClock.c  Election.c  Hangman.c  Hospital.c  LL.c  LL_simple.c  LexicalAnalyzer.c  LibraryStart.c  QuizGame.c  SnakeLadder.c  StonePaperScissors.c  StudentInfo.c  TelecomBill.c  TicTacToe.c  dll.c
Visual Programming With JavaFX/JavaSwing/Cookie Clicker/src/: App.java  (+1 more)
Visual Programming With JavaFX/JavaSwing/Pokemon Quiz/: config.txt
Web Development With React and .NET/Frontend/Basic HTML and CSS Website/: activities.html  contact.html  gastronomy.html  history.html  index.html  nature.html  style.css
(+477 files in other folders)
